# platform-cap-receipt

./: .gitignore  Makefile  README.md  openapi.yaml
.github/: settings.yml
infra/: samconfig.toml  template.yaml
receipt/infra/api/: samconfig.toml  template.yaml
receipt/states/: extract_receipt.json
src/Lamba-function/: Cargo.toml
src/Lamba-function/src/: S3.rs
src/api/: openapi.yaml
src/api/lambda/: Cargo.toml
src/api/lambda/src/: main.rs
src/api/lambda/src/format/: mod.rs  type_class.rs
src/api/lambda/src/format/block/: block.rs  block_type.rs  mod.rs  response_block.rs
src/api/lambda/src/format/geometry/: polygon.rs
src/api/lambda/src/format/line_item/: expense_field_response.rs  mod.rs
src/api/lambda/src/s3/: mod.rs  s3_client.rs
src/api/lambda/src/util/: authorization_context.rs
src/lambda/: Cargo.toml
src/lambda/src/: main.rs
src/lambda/src/format/: input.rs  lib.rs  mod.rs  output.rs  type.rs  type_class.rs
src/lambda/src/format/block/: block.rs  block_type.rs  lib.rs  mod.rs  relationship.rs  response_block.rs  text_type.rs  type_enum.rs
src/lambda/src/format/geometry/: bouding_box.rs  geometry.rs  mod.rs  polygon.rs
src/lambda/src/format/line_item/: expense_field.rs  expense_field_response.rs  group.rs  group_response.rs  lib.rs  line_item.rs  line_item_response.rs  mod.rs
src/lambda/src/format/summary/: field.rs  field_response.rs  field_wrapper.rs  group_property.rs  lib.rs  mod.rs
src/lambda/src/s3/: lib.rs  mod.rs  s3_client.rs
src/lambda/src/util/: detection.rs  field_response.rs  input_data.rs  mod.rs  output_data.rs
src/process_receipt/: state_machine.json
src/states/: analyze_expense.json  put_object.json
(+22 files in other folders)
