[package]
name = "get_receipt"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.10.0"
tokio = { version = "1", features = ["macros"] }
serde = "1"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
aws-config = "1.1.8"
aws-smithy-http = "0.60.7"
aws-sdk-s3 = "1.20.0"
thumbnailer = "0.5.1"
mime = "0.3.16"
async-trait = "0.1.68"
