[package]
name = "get_receipt"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.10.0"
tokio = { version = "1", features = ["macros"] }
serde = "1"
serde_json = "1.0"
aws-config = "1.1.8"
aws-smithy-http = "0.60.7"
aws-sdk-s3 = "1.20.0"
thumbnailer = "0.5.1"
mime = "0.3.16"
async-trait = "0.1.68"
